fix breadcrumb arrow vertical align issue

--- a/assets/sass/components/_breadcrumb.scss
+++ b/assets/sass/components/_breadcrumb.scss
@@ -11,7 +11,6 @@
 			color: $black-hint-solid;
 			content: "chevron_right";
 			display: inline-block;
-			line-height: $line-height;
 			margin-left: 0.4em;
 		}
 	}
