--- a/css/base.css
+++ b/css/base.css
@@ -2395,7 +2395,6 @@ body.el-loading {
   color: #9a9a9a;
   content: "chevron_right";
   display: inline-block;
-  line-height: 20px;
   margin-left: 0.4em;
 }
 .breadcrumb > .active {
